Fix navbar spacing on mobile devices

--- a/assets/css/main.css
+++ b/assets/css/main.css
@@ -1,11 +1,4 @@
 /* style.css */
-.navbar-brand {
-   margin-left: 42rem;
-}
-
-.navbar-nav {
-   margin-right: 42rem;
-}
 
 canvas {
   display: block;
@@ -60,6 +53,42 @@ canvas {
 @media (max-width: 992px) { 
    .display-2 {
       font-size: 3.5rem;
+   }
+
+   .display-4 {
+      font-size: 2rem;
+   }
+
+   .row {
+      margin-left: 0;
+      margin-right: 0;
+   }
+
+   #about, #projects {
+      padding-left: 4rem;
+      padding-right: 4rem;
+   }
+
+   .navbar-brand {
+      margin-left: 4rem;
+   }
+
+   .navbar-toggler {
+      margin-right: 4rem;
+   }
+
+   .navbar-collapse{
+      margin-left: 4rem;
+   }
+}
+
+@media (min-width: 992px){
+   .navbar-brand {
+      margin-left: 42rem;
+   }
+
+   .navbar-nav {
+      margin-right: 42rem;
    }
 }
 
